2019-09-17: Initial commit
Creation of the imcRtools package and readCPfunction