@@ -1,0 +1,20 @@
+# Generated by roxygen2: do not edit by hand
+
+export(calculateSummary)
+export(plotCellCounts)
+export(plotDist)
+import(SingleCellExperiment)
+import(SummarizedExperiment)
+import(ggplot2)
+importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,SimpleList)
+importFrom(SingleCellExperiment,colData)
+importFrom(SummarizedExperiment,assay)
+importFrom(ggridges,geom_density_ridges)
+importFrom(matrixStats,rowMedians)
+importFrom(matrixStats,rowVars)
+importFrom(methods,is)
+importFrom(reshape2,melt)
+importFrom(stats,aggregate)
+importFrom(stats,median)
+importFrom(stats,var)
