@@ -1,4 +1,5 @@
 # Helper functions to check entries and validity of SingleCellExperiment
+#' @importFrom methods is
 .sceCheck <- function(x){
   if(!is(x, "SingleCellExperiment")){
     stop("x is not a SingleCellExperiment object.")
